# HaskellTutorials

./: .gitignore  README.md
Aeson/: aeson00.hs
AutoBuilder/: Main.hs
Binary/: Read.hs  ReadSeg.hs
Combinatorics/: PhytagorianTripples.hs  SendMoreMoney.hs
EasyRaster/: EasyRaster.cabal  InstallationError.txt  LICENSE
EasyRaster/Graphics/EasyRaster/: GTK.hs
EasyRaster/Graphics/EasyRaster/GTK/: Paranoid.hs
EasyRaster/src/: GTKWrapper.hs  GTKWrapperSave.hs  Main.hs
ErrorT/: Login01.hs
Gloss/: Gloss.cabal  LICENSE
Gloss/src/: Main.hs
HaskellGL/: HaskellGL.cabal
HaskellGL/src/: Main.hs
Haste/: Calculator00.hs  Dom01.hs  Dom01.html  Echo.hs  FallingBalls.hs  HasteHelpers.hs  HelloWorld.hs  Interact.hs  SimpleText.hs  Snowmen.hs
Hubert/: Hubert.cabal  LICENSE  README.md
Hubert/src/: CSS.hs  Dom.hs  Main.hs
Hubert/src/HTML/: Parsec.hs
Hubert/tests/: tests.hs
LLVM/src/chapter1/: minimal.ll  simple.ll
Lucid/: ClayExt.hs  ClayTables.hs  LucidExt.hs  berg21.hs  clay21.hs  lucid01.hs  table01.hs  tables.css
MonadTransformers/: ExceptT01.hs  ExceptT02.hs  ExceptT03.hs  StateT01.hs
ProtoHaskell/: LICENSE  ProtoHaskell.cabal
ProtoHaskell/src/: Compiler.hs  Flags.hs  Frontend.hs  Main.hs  Monad.hs  Name.hs  Pretty.hs  Type.hs  Unassigned.hs
Scotty/: LICENSE  Scotty.cabal
Scotty/src/: AuthServer.hs  Directories.hs  DirectoryViewer.hs  WebServer.hs
Servant/: DemoTypes.hs  ServantTutorial.cabal  Tutorial1.cabal  Tutorial1.hs  Tutorial3.hs
Transformers/: BuildTransformer1.hs  Transformers.cabal  Transformers.hs
Web/: aeson00.hs  aeson01.hs  wreq00.hs
accelerate/: accelerate00.hs  accelerate01.hs
opaleye/: Main.hs  emplyeeTable.sql  opaleye.cabal
opq-exercises/: W1.hs  W2.hs  W3.hs  W4.hs  W5.hs  W6.hs  W7.hs
