name:                ServantTutorial
version:             0.1.0.0
synopsis:            First Servant Tutorial
-- description:
license:             BSD3
license-file:        LICENSE
author:              roland
maintainer:          rsx@bluewin.ch
-- copyright:
category:            Web
build-type:          Simple
extra-source-files:  Server
cabal-version:       >=1.10

executable Tutorial3
  main-is:             Tutorial3.hs
  other-modules:       DemoTypes
  other-extensions:    DataKinds,
                       DeriveGeneric,
                       FlexibleInstances,
                       GeneralizedNewtypeDeriving,
                       MultiParamTypeClasses,
                       OverloadedStrings,
                       ScopedTypeVariables,
                       TypeOperators,
                       TypeFamilies
  build-depends:       base >=4.8 && <4.9,
                       transformers >=0.4 && <0.5,
                       mtl >=2.2 && <2.3,
                       either >=4.4 && <4.5,
                       aeson >=0.9 && <0.10,
                       attoparsec >=0.13 && <0.14,
                       bytestring >=0.10 && <0.11,
                       string-conversions >=0.4 && <0.5,
                       time >=1.5 && <1.6,
                       lucid >=2.9 && <2.10,
                       http-media >=0.6 && <0.7,
                       wai >=3.2 && <3.3,
                       warp >=3.2 && <3.3,
                       servant-server >=0.4 && <0.5,
                       directory >=1.2 && <1.3,
                       blaze-markup >=0.7 && <0.8,
                       blaze-html >=0.8 && <0.9,
                       text >=1.2 && <1.3,
                       servant >=0.4 && <0.5,
                       stm >=2.4 && <2.5
  -- hs-source-dirs:
  default-language:    Haskell2010
